# pacclean

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: alpm.rs  app.rs  byte_format.rs  cli.rs  consts.rs  help.in  io.rs  main.rs  package.rs  pacman_conf.rs  print.rs
src/cli/: error.rs  tests.rs
src/pacman_conf/: test_config.in  tests.rs
